# knessetIL

./: .env.example  .gitignore  README.md  create-shortcut.ps1  netlify.toml  package.json  playwright.config.ts  pnpm-lock.yaml  start.ps1  turbo.json
.claude/: settings.local.json
.github/workflows/: sync.yml
apps/api/: .env.example  Dockerfile  alembic.ini  list_votes.py  pyproject.toml  requirements.txt
apps/api/alembic/: env.py
apps/api/alembic/versions/: 0001_initial.py  0002_add_mk_phone_coalition.py  0003_add_cache_entries.py  0004_add_ai_explanations.py
apps/api/app/: config.py  database.py  deps.py  main.py
apps/api/app/db_models/: __init__.py  bill.py  cache.py  explanation.py  faction.py  member.py  vote.py
apps/api/app/models/: bill.py  member.py  party.py  vote.py
apps/api/app/routers/: bills.py  explanations.py  members.py  parties.py  stats.py  votes.py
apps/api/app/services/: ai_explanation_service.py  bills_service.py  cache_service.py  members_service.py  mk_snapshot_service.py  oknesset_client.py  parties_service.py  votes_service.py
apps/api/app/tasks/: sync.py
apps/api/data/: knesset_mks.json  mklobby_k25.json
apps/api/scripts/: seed_knesset25.py
apps/web/: Dockerfile  next.config.mjs  next.config.ts  package.json  tailwind.config.ts  test_katz.js  test_odata.js
deployment/ionos-vps/: README.md  ecosystem.config.js  nginx.conf  setup.sh
deployment/netlify-supabase/: README.md
e2e/: app.spec.ts
infra/: docker-compose.dev.yml  docker-compose.yml
infra/nginx/: nginx.conf
skills/: commit_separator.md
(+67 files in other folders)
